org_unpackaged/standard/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>fs_region__c</fullName>
        <inlineHelpText>MBO Associate Region</inlineHelpText>
        <label>Regions</label>
        <picklist>
            <picklistValues>
                <fullName>DC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_sPhoneType__c</fullName>
        <label>Secondary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_salesStatusReason__c</fullName>
        <label>Sales Status Reason</label>
        <picklist>
            <controllingField>Sub_Status__c</controllingField>
            <picklistValues>
                <fullName>Client Canceled Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Vetting Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislikes Benefit Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking For Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Annual Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO/Client Didn&apos;t Agree To Project Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Self-Employable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupation Not Supported (WC/E&amp;O/B2C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Seeking Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taking Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took W-2 Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Not Supported/Int&apos;l Tax Withholding Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants To Retain 1099 Status/Brand/Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_skills__c</fullName>
        <label>Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_statusCode__c</fullName>
        <label>Termination Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Layoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_statusReason__c</fullName>
        <label>Associate Status Reason</label>
        <picklist>
            <controllingField>Associate_Status__c</controllingField>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed to part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Term by client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Term by member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost hours with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project on hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Position elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Position with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misconduct with Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misconduct with MBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Returning Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good fit for MBO model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeatable poor performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resigned/Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired, no longer working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taking time off/sabbatical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_subPersona__c</fullName>
        <label>Sub-Persona</label>
        <picklist>
            <controllingField>fs_persona__c</controllingField>
            <picklistValues>
                <fullName>Professional Service Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobby IC (Financially Independent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Retired Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent Retired Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh Lay-off/Job Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC Newbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering IC (Actively Searching Vendors/Way to Incorporate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Fresh Lay-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced PSC Newbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasoned CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Broker or Group Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newbie Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newbie Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker that is an MBO Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker that is an MBO Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Corp Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Company that Uses 1099 Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Company Needing Payroll (Primarily NSE Workers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Company Needing Payroll</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_twitter__c</fullName>
        <label>Twitter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_userName__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmsilt__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmsilt__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>origDate__c</fullName>
        <label>Original Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rs_opsAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Admin</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Associate OA</relationshipLabel>
        <relationshipName>Associate_OA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_qualAdvisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Advisor</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Associates QA</relationshipLabel>
        <relationshipName>Associate_QA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_referringAffiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Affiliate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please enter a contact with their type set to affiliate</errorMessage>
            <filterItems>
                <field>Contact.Accounttype__c</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Associates (Contact)</relationshipLabel>
        <relationshipName>Affiliate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_referringAssociate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate Referral</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associate Referral</relationshipLabel>
        <relationshipName>Referred_Associates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContactsActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Client</value>
        </filters>
        <filters>
            <field>Client_status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>All Company Contacts - Active Clients</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContactsMisc</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Client</value>
        </filters>
        <filters>
            <field>Client_status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Client_status__c</field>
            <operation>equals</operation>
            <value>Active,Negative</value>
        </filters>
        <label>All Company Contacts - Misc</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContactsPending</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Client</value>
        </filters>
        <filters>
            <field>Client_status__c</field>
            <operation>equals</operation>
            <value>Converted Lead,Prospected,Identified,Closed,Legacy B2C</value>
        </filters>
        <label>All Company Contacts - Pending Clients</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllRolodexContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Rolodex</value>
        </filters>
        <label>All Rolodex Contacts</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Direct_Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Arhancet,Taylor</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Rolodex</value>
        </filters>
        <filters>
            <field>Accounttype__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>All Direct Partners</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>COI</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.COI</value>
        </filters>
        <label>Center of Influence</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>COI</fullName>
        <active>true</active>
        <description>Contacts associated with small business direct referalls, managed by consultant services</description>
        <label>Center of Influence</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>A contact that is associated with an account that is related to MBO ES</description>
        <label>Enterprise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rolodex</fullName>
        <active>true</active>
        <description>Any contact that we want to keep in touch with, but not sell to</description>
        <label>Rolodex</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ContactStatusReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISPICKVAL(Sub_Status__c,&quot;Unidentified Project&quot;),
       ISPICKVAL(Sub_Status__c,&quot;Not Qualified&quot;),
       ISPICKVAL(Sub_Status__c,&quot;Could Not Sell&quot;)
    ),
    ISPICKVAL(fs_salesStatusReason__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>fs_salesStatusReason__c</errorDisplayField>
        <errorMessage>Please select an available Sales Status Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Company</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( LeadSource,&quot;Referred by Company&quot;), Referring_Account__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>If Lead Source = Referred by Company, you must indicate which Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_City</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( MailingCity ) &gt; 30,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>MailingCity</errorDisplayField>
        <errorMessage>Please limit the character size to 30 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_State</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( MailingState )&gt;2</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>Please use the 2 letter abbreviation prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_Street</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( MailingStreet ) &gt; 200,
 fb_MBO__c =TRUE)</errorConditionFormula>
        <errorDisplayField>MailingStreet</errorDisplayField>
        <errorMessage>Please limit the character size to 200 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_Zip</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( MailingPostalCode ) &gt; 30,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Please limit the character size to 30 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireEmail</fullName>
        <active>false</active>
        <errorConditionFormula>Email = NULL</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please set the email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequirePhone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Phone=NULL,Email=NULL)</errorConditionFormula>
        <errorMessage>Please set the phone or the email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Setting_Pardot_Campaign</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($User.ProfileId = &apos;00eC0000001Ssms&apos;,
       $User.ProfileId = &apos;00eC0000001TMud&apos;
      ),
    ISCHANGED(pi__campaign__c),
    NOT(ISBLANK(PRIORVALUE(pi__campaign__c))),
    NOT(ISNULL(PRIORVALUE(pi__campaign__c))),
    NOT(PRIORVALUE(pi__campaign__c)=&apos;Manually Added to SFDC&apos;),
    NOT(PRIORVALUE(pi__campaign__c)=&apos;Initial Import from Marketo (2014)&apos;)   
   )</errorConditionFormula>
        <errorDisplayField>pi__campaign__c</errorDisplayField>
        <errorMessage>Please contact an admin to overwrite this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISPICKVAL(Contact_Status__c,&quot;Alumni&quot;),
       ISPICKVAL(Contact_Status__c,&quot;Deferred&quot;)
    ),
    ISPICKVAL(Sub_Status__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Sub_Status__c</errorDisplayField>
        <errorMessage>Please select an available Sub-status.</errorMessage>
    </validationRules>
</CustomObject>